Fix spacing

--- a/css/metodooff.scss
+++ b/css/metodooff.scss
@@ -353,6 +353,10 @@ header {
         line-height: 1.25;
         margin-left: auto;
         margin-right: auto;
+        
+        p {
+            margin-bottom: 1rem;
+        }
     }
 }
 
@@ -562,7 +566,7 @@ p.description {
 
 footer {
     background-color: #000;
-    padding: 2rem;
+    padding: 2rem 1rem;
     font-family: 'TT-Norms', sans-serif;
     font-size: 1rem;
     color: white;
